src/front-end/components/header.css
:host {
    font-family: "SF-Pro";
}

/* Top navigation */
#container {
    display: flex;
    width: 100%;
    object-position: 10%;
    align-items: center;
    height: 72px;
}

#file {
    height: 30px;
    display: flex;
}

.header {
    font-family: "SF-Pro";
    position: relative;
    height: 56px;
    margin-top: 16px;
    width: 100%;
    display: flex;
    align-items: center;
    border-bottom: solid 1px var(--divider-color);
}

.header > div{
    margin-bottom: 17px;
}

button {
    user-select: none;
    vertical-align: middle;
    border: none;
    font-size: 14px;
    font-weight: bold;
    background-color: rgba(0,0,0,0);
}

.new-button {
    color: var(--highlighted-font-color);
    background-color: var(--primary-button-color);
    height: 31px;
    float: right;
    padding: 0 9px;
    border-radius: 6px;
    margin-left: auto;
    margin-right: 5px;
    margin-bottom: 15px;
    cursor: pointer;
}

.edit-button {
    color: var(--highlighted-font-color);
    margin-left: 17px;
    background-color: var(--secondary-button-color);
    height: 31px;
    padding: 0 9px;
    border-radius: 6px;
    cursor: pointer;
}

h1 {
    display: inline;
    font-size: 41px;
    font-weight: bold;
    vertical-align: middle;

    z-index: 0;
    outline: none;
}
.search-box {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 17px;
    margin-right: 10px;
    margin-left: auto;
}

.search-box + .new-button{
    margin-left: 0;
}
  
.search-box input {
    display: inline-block;
    border-radius: 5px;
    font-size: 20px;
    border: none;
    font-size: 20px;
    box-shadow: 1px 1px 9px 0 var(--card-shadow);
    margin-right: 5px;
    padding: 8px 0;
    width: 0;
    height: 36px;
    background-color: rgba(0, 0, 0, 0);
    transition: width 0.45s ease-in-out;
    outline:none;
}

.search-box a {
    height: 44px;
}

.search-btn:hover{
    transition: 150ms;
      opacity: 90%;
  }
.search-box:hover > .search-input{
    display: inline-block;
    opacity: 90%;
}
.search-box:hover > input{
    border-radius: 5px;
    width: 260px;
    color: var(--normal-font-color);
    padding: 8px;
    outline:none;
}

input:focus{
    border-radius: 5px;
    width: 260px;
    color: var(--normal-font-color);
    font-size: 20px;
    padding: 8px;
    outline:none;
  }
  .search-btn{
      width: 30px;
      margin-top: 15px;
      opacity: 60%;
  }

  .search_bar {
    display: flex;
    align-items: center;
    margin: 15px 0 17px 10px;
    padding: 0 5px;
    border-radius: 5px;
    box-shadow: 1px 1px 9px 0 var(--card-shadow);
    border-color: var(--card-shadow);
    border-width: 2px;
    width: calc(36.6% - 95px);
    border-style: solid;
    opacity: 60%;
}

.search_bar img {
    display: inline-block;

    opacity: 50%;
    height: 21px;

    vertical-align: middle;

    filter: var(--icon-filter);
}

.search_bar input{

    background-color: rgba(0, 0, 0, 0);
    color: var(--normal-font-color);
    font-size: 20px;
    opacity: 90%;
    height: 42px;
    text-align: left;
    width: calc(100% - 7px);
    border: solid;
    border-radius: 5px;
    border-color: rgba(0, 0, 0, 0);
    outline: none;
}

/* Fade in for search bar */
.search_bar:hover img {
    opacity: 50%;
    transition: opacity 150ms;
}

.search_bar:hover {
    transition: 150ms;
    opacity: 90%;
    
}

.search_bar input:focus .search_bar{
    transition: 150ms;
    opacity: 90%;
}
.search-btn{
    height: 28px;
    padding: 12px 8px 4px;
    opacity: 60%;
}

#header_back{
    margin-left: 0;
    margin-right: 5px;
}

#header_forward{
    margin-right: 0;
    margin-left: 5px;
}

#todaysLog {
    display: inline;
}

#monthlyLog {
    display: inline;
}

#futureLog {
    display: inline;
}

.hide{
    display: none;
    opacity: 0;
}

#menuToggle {
    display: none;
}

@media screen and (max-width: 1450px) {
    .search_bar input {
        width: 220px;
    }
}

@media screen and (max-width: 1280px) {
    .search_bar input {
        width: 170px;
    }
}

@media screen and (max-width: 1220px) {
    .search_bar {
        display: none;
    }
}

@media screen and (max-width: 1100px) {
    
    :host {
        margin-left: 20px;
        padding-top: 10px;
        margin-top: 0px;
    }

    .search_bar {
        display: none;
    }

    .header{
        margin-left: 35px;
        margin-right: 35px;
        text-align: center;
        flex: 2;
    }

    .plus {
        width: 23px;
        height: 23px;
        padding-top: 5px;
        right: 20px;
    }

    #title_page{
        top: 5px;
        font-size: 35px;
    }

    button.imgbutton {
        padding: 0;
    }
    #header_back{
        margin-left: 0;
        margin-right: 1px;
    }

    #header_forward{
        margin-right: 0;
        margin-left: 1px;
    }
    
    #container{
        height: 70px;
        align-items: center;
    }

    #menuToggle {
        display: inline-block;
        flex-direction: column;
        left: 20px;
        padding-top: 5px;
        /* z-index: 1; */
    }

    #menuToggle input {
        display: flex;
        width: 40px;
        height: 32px;
        left: 10px;
        top: 15px;
        position: absolute;
        cursor: pointer;
        opacity: 0;
        z-index: 2;
    }

    #menuToggle span {
        display: flex;
        width: 29px;
        height: 2px;
        margin-top: 5px;
        margin-bottom: 5px;
        position: relative;
        border-radius: 3px;
        background: var(--content-foreground-color);
        /* z-index: 1; */
        transform-origin: 5px 0px;
        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                    opacity 0.55s ease;
    }

    #menuToggle span:first-child {
        transform-origin: 0% 0%;
    }

    #menuToggle span:nth-last-child(2) {
        transform-origin: 0% 100%;
    }

    #menuToggle input:checked ~ span {
        opacity: 1;
        transform: rotate(45deg) translate(-7px, -10px);
    }

    #menuToggle input:checked ~ span:nth-last-child(3) {
        opacity: 0;
        transform: rotate(0deg) scale(0.2, 0.2);
    }

    #menuToggle input:checked ~ span:nth-last-child(2) {
        transform: rotate(-45deg) translate(-5px, 10px);
    }
}

@media screen and (max-width: 700px) {
    .plus{

    }

    #container{
        height: 50px;
    }

    #title_page{
        top: 5px;
        font-size: 22px;
    }

    #menuToggle input {
        top: 8px;
    }

    button.imgbutton img {
    }

    button.imgbutton {
        padding: 0;
    }

    #header_back {
        margin-left: 0;
        margin-right: 1px;
    }

    #header_forward{
        margin-right: 0;
        margin-left: 1px;
    }
}

